# test

./: .travis.yml
hello_cmake/: CMakeLists.txt
hello_cmake/src/: main.cpp
